Прочитал Андрей. Книга 5: Гонка Уровней

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/andrei_5.jpg" title="Андрей. Книга 5: Гонка Уровней"></th>
 <th><img src="jpg/andrei_4.jpg" title="Андрей. Книга 4: Война Кланов"></th>
 <th><img src="jpg/andrei_3.jpg" title="Андрей. Книга 3: Сангис"></th>	
 <th><img src="jpg/andrei_2.jpg" title="Андрей. Книга 2: Архитекторы"></th>		
@@ -1486,12 +1487,13 @@
 
 
 <table><tr align="left"> 
-<th colspan="3"><h4>Романовский Борис</h4></th>	
+<th colspan="6"><h4>Романовский Борис</h4></th>	
 </tr><tr>  
 <th><img src="jpg/andrei_1.jpg" title="Андрей. Книга 1: Начало"></th>
 <th><img src="jpg/andrei_2.jpg" title="Андрей. Книга 2: Архитекторы"></th>
 <th><img src="jpg/andrei_3.jpg" title="Андрей. Книга 3: Сангис"></th>	
 <th><img src="jpg/andrei_4.jpg" title="Андрей. Книга 4: Война Кланов"></th>
+<th><img src="jpg/andrei_5.jpg" title="Андрей. Книга 5: Гонка Уровней"></th>
 </tr></table>
 
 
