Прочитал Андрей. Книга 6: Кровавый Император

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/andrei_6.jpg" title="Андрей. Книга 6: Кровавый Император"></th>		
 <th><img src="jpg/andrei_5.jpg" title="Андрей. Книга 5: Гонка Уровней"></th>
 <th><img src="jpg/andrei_4.jpg" title="Андрей. Книга 4: Война Кланов"></th>
 <th><img src="jpg/andrei_3.jpg" title="Андрей. Книга 3: Сангис"></th>	
@@ -1494,6 +1495,7 @@
 <th><img src="jpg/andrei_3.jpg" title="Андрей. Книга 3: Сангис"></th>	
 <th><img src="jpg/andrei_4.jpg" title="Андрей. Книга 4: Война Кланов"></th>
 <th><img src="jpg/andrei_5.jpg" title="Андрей. Книга 5: Гонка Уровней"></th>
+<th><img src="jpg/andrei_6.jpg" title="Андрей. Книга 6: Кровавый Император"></th>	
 </tr></table>
 
 
