Прочитал Темные отражения

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/temni-otrazh.jpg" title="Темные отражения"></th>
 <th><img src="jpg/andrei_6.jpg" title="Андрей. Книга 6: Кровавый Император"></th>		
 <th><img src="jpg/andrei_5.jpg" title="Андрей. Книга 5: Гонка Уровней"></th>
 <th><img src="jpg/andrei_4.jpg" title="Андрей. Книга 4: Война Кланов"></th>
@@ -547,49 +548,51 @@
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Бракен Александра</h4></th>
 <th colspan="3"><h4>Браславский Дмитрий</h4></th>
 <th colspan="2"><h4>Брин Ярослав</h4></th>
 <th colspan="2"><h4>Брэдбери Рэй</h4></th>
-<th colspan="2"><h4>Брэнсон Ричард</h4></th>
 </tr><tr>
+<th><img src="jpg/temni-otrazh.jpg" title="Темные отражения"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><a id="a50" src="jpg/pyt_geroia_1.jpg" title="Подземелья Черного замка (книга-игра)"></a></th>
 <th><a id="a53" src="jpg/pyt_geroia_1.jpg" title="Верная шпага короля (книга-игра)"></a></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/zhir.jpg" title="Меняю жир на силу воли"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/451.jpg" title="451 градус по Фаренгейту"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><img src="jpg/beris_i_delai.jpg" title="К черту всё! Берись и делай!"></th>
-<th><a id="a14" src="jpg/branson.jpg" title="Теряя невинность. Автобиография (аудиокнига)"></a></th> 
 </tr></table>
 
 
 
-<table><tr align="left"> 
+<table><tr align="left">
+<th colspan="3"><h4>Брэнсон Ричард</h4></th>
 <th colspan="2"><h4>Буль Пьер</h4></th>
 <th colspan="2"><h4>Вагин Игорь</h4></th> 
-<th colspan="2"><h4>Вайцкин Джош</h4></th> 
-<th colspan="2"><h4>Вальдшмидт Дэн</h4></th>
-<th colspan="2"><h4>Ветошкина Галина</h4></th>
+<th colspan="3"><h4>Вайцкин Джош &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					Вальдшмидт Дэн</h4></th>
 </tr><tr>
+<th><img src="jpg/beris_i_delai.jpg" title="К черту всё! Берись и делай!"></th>
+<th><a id="a14" src="jpg/branson.jpg" title="Теряя невинность. Автобиография (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/planeta_obezyan.jpg" title="Планета обезьян"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a5" src="jpg/podnimis_nad_tolpoi.jpg" title="Поднимись над толпой (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/iskysstvo_ychitcia.jpg" title="Искусство учиться"></th> <th><img src="jpg/0.jpg"></th>
 
-<th><a id="a7" src="jpg/byd_lychshei_versiei.jpg" title="Будь лучшей версией себя. Как обычные люди становятся выдающимися (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><img src="jpg/dodo_kniga.jpg" title="Ветошкина Галина, Заварин Иван, Игушева Екатерина, Котин Максим - Додо книга"></th> <th><img src="jpg/0.jpg"></th>
+<th><a id="a7" src="jpg/byd_lychshei_versiei.jpg" title="Будь лучшей версией себя. Как обычные люди становятся выдающимися (аудиокнига)"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Ветошкина Галина</h4></th>
 <th colspan="6"><h4>Вуйчич Ник</h4></th> 
 <th colspan="2"><h4>Вэнс Эшли</h4></th>
-<th colspan="2"><h4>Гандапас Радислав</h4></th>
 </tr><tr>
+<th><img src="jpg/dodo_kniga.jpg" title="Ветошкина Галина, Заварин Иван, Игушева Екатерина, Котин Максим - Додо книга"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/nick_vujicic_1.jpg" title="Жизнь без границ"></th>
 <th><img src="jpg/nick_vujicic_2.jpg" title="Неудержимый"></th>
 <th><img src="jpg/nick_vujicic_3.jpg" title="Будь сильным"></th>
@@ -597,17 +600,18 @@
 <th><img src="jpg/nick_vujicic_5.jpg" title="Безграничность"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a31" src="jpg/ilon_mask.jpg" title="Илон Маск. Tesla, SpaceX и дорога в будущее (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><img src="jpg/zh.jpg" title="Полная Ж. Жизнь как бизнес-проект"></th> <th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Гандапас Радислав</h4></th>
 <th colspan="2"><h4>Гапеев Валерий</h4></th> 
 <th colspan="2"><h4>Гараев Роберт</h4></th>
 <th colspan="2"><h4>Гард Рэй</h4></th>
 </tr><tr>
+<th><img src="jpg/zh.jpg" title="Полная Ж. Жизнь как бизнес-проект"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/noch_cmoka.jpg" title="Ноч цмока"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/slovo_pacana.jpg" title="Слово пацана. Криминальный Татарстан 1970–2010-х"></th> <th><img src="jpg/0.jpg"></th>
