--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/z_prostoti.jpg" title="Законы простоты"></th>
+	<th><img src="data/04.2024.jpg"></th>
 <th><img src="jpg/temni-otrazh.jpg" title="Темные отражения"></th>
 <th><img src="jpg/andrei_6.jpg" title="Андрей. Книга 6: Кровавый Император"></th>		
 <th><img src="jpg/andrei_5.jpg" title="Андрей. Книга 5: Гонка Уровней"></th>
@@ -1325,8 +1327,8 @@
 <table><tr align="left"> 
 <th colspan="4"><h4>Мрочковский Николай</h4></th>
 <th colspan="2"><h4>Мусаси Миямото</h4></th>
+<th colspan="2"><h4>Маэда Джон</h4></th>
 <th colspan="2"><h4>Мэнсон Марк</h4></th>
-<th colspan="2"><h4>Наварро Джо</h4></th>
 </tr><tr>  
 <th><img src="jpg/extrim.jpg" title="Мрочковский Николай, Толкачев Алексей - Экстремальный тайм-менеджмент"></th>
 <th><a id="a29" src="jpg/ekstrim_menedzhment_2.jpg" title="Мрочковский Николай, Толкачев Алексей - Личная власть (аудиокнига)"></a></th>
@@ -1334,19 +1336,22 @@
 
 <th><img src="jpg/bysido_3.jpg" title="Книга Пяти Колец"></th> <th><img src="jpg/0.jpg"></th>
 
-<th><img src="jpg/myzh_pravila.jpg" title="Мужские правила"></th> <th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/z_prostoti.jpg" title="Законы простоты"></th> <th><img src="jpg/0.jpg"></th>
 
-<th><img src="jpg/navarro.jpg" title="Я вижу, о чём вы думаете"></th> <th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/myzh_pravila.jpg" title="Мужские правила"></th> <th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Наварро Джо</h4></th>
 <th colspan="2"><h4>Найт Фил</h4></th>
 <th colspan="2"><h4>Найтингейл Эрл</h4></th>
 <th colspan="3"><h4>Непряхин Никита</h4></th>
 <th colspan="2"><h4>Новак Алекс</h4></th>
 </tr><tr>  
+<th><img src="jpg/navarro.jpg" title="Я вижу, о чём вы думаете"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/nike.jpg" title="Продавец обуви"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a44" src="jpg/strani_sekret.jpg" title="Самый странный секрет (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
