Прочитал Тонкое искусство пофигизма

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a135" src="jpg/tonkoe_iskusstvo.jpg" title="Тонкое искусство пофигизма. Парадоксальный способ жить счастливо (аудиокнига)"></a></th>
 <th><img src="jpg/z_prostoti.jpg" title="Законы простоты"></th>
 	<th><img src="data/04.2024.jpg"></th>
 <th><img src="jpg/temni-otrazh.jpg" title="Темные отражения"></th>
@@ -1338,7 +1339,8 @@
 
 <th><img src="jpg/z_prostoti.jpg" title="Законы простоты"></th> <th><img src="jpg/0.jpg"></th>
 
-<th><img src="jpg/myzh_pravila.jpg" title="Мужские правила"></th> <th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/myzh_pravila.jpg" title="Мужские правила"></th>
+<th><a id="a135" src="jpg/tonkoe_iskusstvo.jpg" title="Тонкое искусство пофигизма. Парадоксальный способ жить счастливо (аудиокнига)"></a></th>
 </tr></table>
 
 
