Прочитал Мечтают ли андроиды об электроовцах?

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/mechtayt_li.jpg" title="Мечтают ли андроиды об электроовцах?"></th>		
 <th><a id="a135" src="jpg/tonkoe_iskusstvo.jpg" title="Тонкое искусство пофигизма. Парадоксальный способ жить счастливо (аудиокнига)"></a></th>
 <th><img src="jpg/z_prostoti.jpg" title="Законы простоты"></th>
 	<th><img src="data/04.2024.jpg"></th>
@@ -875,6 +876,15 @@
 
 <th><img src="jpg/obnimi_menia.jpg" title="Обними меня крепче. 7 диалогов для любви на всю жизнь"></th> <th><img src="jpg/0.jpg"></th>
 </tr></table>
+
+
+
+<table><tr align="left"> 
+<th colspan="1"><h4>Дик Филип</h4></th>
+</tr><tr> 
+<th><img src="jpg/mechtayt_li.jpg" title="Мечтают ли андроиды об электроовцах?"></th>
+</tr></table>
+
 
 
 <table><tr align="left"> 
