Прочитал Английский для дебилов

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/eng_1.jpg" title="Английский для дебилов"></th>
 <th><img src="jpg/ogromni_penis.jpg" title="Как жить, если у тебя огромный пенис"></th>
 <th><img src="jpg/mechtayt_li.jpg" title="Мечтают ли андроиды об электроовцах?"></th>		
 <th><a id="a135" src="jpg/tonkoe_iskusstvo.jpg" title="Тонкое искусство пофигизма. Парадоксальный способ жить счастливо (аудиокнига)"></a></th>
@@ -976,10 +977,12 @@
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Инглиш Макс</h4></th>	
 <th colspan="2"><h4>Исделл Невил</h4></th>	
 <th colspan="6"><h4>Кавадло Дэнни и Эл</h4></th>
-<th colspan="2"><h4><div align="right">Кавана Джон</div></h4></th>
 </tr><tr>  
+<th><img src="jpg/eng_1.jpg" title="Английский для дебилов"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/coca-cola.jpg" title="Внутри Coca-Cola. История бренда № 1 глазами легендарного CEO"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/denni_kavadlo_1.jpg" title="Дэнни Кавадло - Стена алмазного пресса"></th>
@@ -987,19 +990,20 @@
 <th><img src="jpg/el_i_denni_kavadlo.jpg" title="Эл и Дэнни Кавадло - Уличные тренировки. Городской воркаут"></th>
 <th><img src="jpg/el_kavadlo_1.jpg" title="Эл Кавадло - Подтянитесь! Уличный фитнес"></th>
 <th><img src="jpg/el_kavadlo_2.jpg" title="Эл Кавадло - Сила без границ"></th>
-<th><img src="jpg/el_kavadlo_3.jpg" title="Эл Кавадло - Экстремальная растяжка"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><img src="jpg/conor_mcgregor.jpg" title="Конор Макгрегор. Жизнь без правил"></th>
+<th><img src="jpg/el_kavadlo_3.jpg" title="Эл Кавадло - Экстремальная растяжка"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Кавана Джон</h4></th>
 <th colspan="2"><h4>Кавашима Рюта</h4></th>
 <th colspan="2"><h4>Карапинар Онур</h4></th>
 <th colspan="2"><h4>Кардон Грант</h4></th>
 <th colspan="2"><h4>Карназес Дин</h4>
 </tr><tr>   
+<th><img src="jpg/conor_mcgregor.jpg" title="Конор Макгрегор. Жизнь без правил"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/kavashima_1.jpg" title="Японская система развития интеллекта и памяти"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a98" src="jpg/51_praktika.jpg" title="Маленькие привычки, большие успехи. 51 вдохновляющая практика, чтобы стать лучшей версией себя (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
