--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/porog_3.jpg" title="Прыжок"></th>
 <th><img src="jpg/eng_1.jpg" title="Английский для дебилов"></th>
 <th><img src="jpg/ogromni_penis.jpg" title="Как жить, если у тебя огромный пенис"></th>
 <th><img src="jpg/mechtayt_li.jpg" title="Мечтают ли андроиды об электроовцах?"></th>		
@@ -1266,19 +1267,20 @@
 <th><a id="a78" src="jpg/labirint_otr_1.jpg" title="Лабиринт отражений (аудиокнига)"></th>
 <th><a id="a79" src="jpg/labirint_otr_2.jpg" title="Фальшивые зеркала (аудиокнига)"></th>
 <th><a id="a80" src="jpg/labirint_otr_3.jpg" title="Прозрачные витражи (аудиокнига)"></th>
-<th><a id="a90" src="jpg/porog_1.jpg" title="Порог (аудиокнига)"></th>
-<th><a id="a91" src="jpg/porog_2.jpg" title="Предел (аудиокнига)"></th> </tr>
-<tr> <th><img src="jpg/spektr.jpg" title="Спектр"></th>
-<th><img src="jpg/40_ostrovov.jpg" title="Рыцари сорока островов"></th>
+<th><img src="jpg/spektr.jpg" title="Спектр"></th>
+<th><img src="jpg/40_ostrovov.jpg" title="Рыцари сорока островов"></th> </tr>
+<tr> <th><a id="a90" src="jpg/porog_1.jpg" title="Порог (аудиокнига)"></th>
+<th><a id="a91" src="jpg/porog_2.jpg" title="Предел (аудиокнига)"></th>
+<th><img src="jpg/porog_3.jpg" title="Прыжок"></th>
 <th><a id="a109" src="jpg/lord_s_planeti_zemlia.jpg" title="Лорд с планеты Земля [Трилогия] (аудиокнига)"></th>
 <th><img src="jpg/linia_grez.jpg" title="Линия Грёз"></th>
 <th><img src="jpg/linia_grez_2.jpg" title="Императоры иллюзий"></th>
 <th><img src="jpg/linia_grez_3.jpg" title="Тени снов"></th>
 <th><img src="jpg/not_time_1.jpg" title="Не время для драконов"></th>
 <th><img src="jpg/not_time_2.jpg" title="Не место для людей"></th>
-<th><img src="jpg/magi_bez_vremeni.jpg" title="Маги без времени"></th>
-<th><img src="jpg/today_mam.jpg" title="Сегодня, мама!"></th> </tr>
-<tr> <th><img src="jpg/berega_1.jpg" title="Холодные берега"></th>
+<th><img src="jpg/magi_bez_vremeni.jpg" title="Маги без времени"></th> </tr>
+<tr> <th><img src="jpg/today_mam.jpg" title="Сегодня, мама!"></th>
+<th><img src="jpg/berega_1.jpg" title="Холодные берега"></th>
 <th><img src="jpg/berega_2.jpg" title="Близится утро"></th>
 <th><img src="jpg/genom_1.jpg" title="Геном"></th>
 <th><img src="jpg/genom_2.jpg" title="Танцы на снегу"></th>
