Добавил ссылки на авторов Х-Я

--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@
 <table><tr align="left"> 
 <th colspan="6"><h4><a href="https://flibusta.site/a/109353">Завойчинская Милена</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.site/a/158118">Зиглар Зиг</a></h4></th>
-<th colspan="2">											 Иванов Михаил</h4></th>
+<th colspan="2"><h4>										 Иванов Михаил</h4></th>
 </tr><tr>   
 <th><img src="jpg/vshb_1.jpg" title="Высшая Школа Библиотекарей. Магия книгоходцев"></th> 
 <th><img src="jpg/vshb_2.jpg" title="Высшая Школа Библиотекарей. Боевая практика книгоходцев"></th> 
@@ -1771,11 +1771,11 @@
 
 
 <table><tr align="left"> 
-<th colspan="3"><h4>Хокинг Стивен</h4></th>
-<th colspan="2"><h4>Хорф Харальд</h4></th>
-<th colspan="2"><h4>Цацулин Павел</h4></th>
-<th colspan="3"><h4>Цунэтомо Ямамото| 
-					Чалдини Роберт</h4></th>
+<th colspan="3"><h4><a href="https://flibusta.site/a/11">	 Хокинг Стивен</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.site/a/286751">Хорф Харальд</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.site/a/58577"> Цацулин Павел</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.site/a/19614"> Цунэтомо Ямамото</a>| 
+					<a href="https://flibusta.site/a/6117">	 Чалдини Роберт</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/hoking_1.jpg" title="Теория всего. От сингулярности до бесконечности, происхождение и судьба Вселенной"></th>
 <th><a id="a42" src="jpg/hoking_2.jpg" title="Краткая история времени. От Большого взрыва до черных дыр (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
@@ -1792,9 +1792,9 @@
 
 
 <table><tr align="left">
-<th colspan="2"><h4>Чан Джеки</h4></th>
-<th colspan="2"><h4>Чепмен Гэри</h4></th>
-<th colspan="6"><h4>Черненко Алексей</h4></th>
+<th colspan="2"><h4><a href="https://flibusta.site/a/1884">  Чан Джеки</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.site/a/1944">  Чепмен Гэри</a></h4></th>
+<th colspan="6"><h4><a href="https://flibusta.site/a/105940">Черненко Алексей</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/chan.jpg" title="Я - Джеки Чан"></th> <th><img src="jpg/0.jpg"></th>
 
@@ -1810,9 +1810,9 @@
 
 
 <table><tr align="left"> 
-<th colspan="2"><h4>Чехов А.П.</h4></th>
-<th colspan="2"><h4>Чеширко Евгений</h4></th>
-<th colspan="2"><h4>Шагабутдинов Ренат</h4></th>
+<th colspan="2"><h4><a href="https://flibusta.site/a/20781"> Чехов А.П.</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.site/a/154459">Чеширко Евгений</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.site/a/169016">Шагабутдинов Ренат</a></h4></th>
 </tr><tr>  
 <th><a id="a94" src="jpg/v_sad.jpg" title="Вишневый сад (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
@@ -1824,8 +1824,8 @@
 
 
 <table><tr align="left"> 
-<th colspan="6"><h4>Шарма Робин</h4></th>
-<th colspan="4"><h4>Шварценеггер Арнольд</h4></th>
+<th colspan="6"><h4><a href="https://flibusta.site/a/25175">Шарма Робин</a></h4></th>
+<th colspan="4"><h4><a href="https://flibusta.site/a/20365">Шварценеггер Арнольд</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/robin_sharma_1.jpg" title="Кто заплачет когда ты умрешь"></th>
 <th><img src="jpg/robin_sharma_2.jpg" title="9 тайных посланий от монаха, который продал свой «феррари»"></th>
@@ -1841,11 +1841,11 @@
 
 
 <table><tr align="left"> 
-<th colspan="2"><h4>Шевелева Ольга</h4></th>
-<th colspan="2"><h4>Шекспир Уильям</h4></th>
-<th colspan="3"><h4>Шефер Бодо</h4></th>
-<th colspan="3"><h4>Шмидт Эрик &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					Шрайбер Флора</h4></th>
+<th colspan="2"><h4><a href="https://flibusta.site/a/178835">Шевелева Ольга</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.site/a/20317"> Шекспир Уильям</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.site/a/16011"> Шефер Бодо</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.site/a/121029">Шмидт Эрик</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="https://flibusta.site/a/239451">Шрайбер Флора</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/atlet_i_etiket.jpg" title="Атлет и этикет"></th> <th><img src="jpg/0.jpg"></th>
 
@@ -1862,10 +1862,10 @@
 
 
 <table><tr align="left"> 
-<th colspan="2"><h4>Шульц Говард</h4></th>
-<th colspan="2"><h4>Щеголев Илья</h4></th>
-<th colspan="2"><h4>Экер Харв</h4></th>
-<th colspan="3"><h4>Экман Пол</h4></th>
+<th colspan="2"><h4><a href="https://flibusta.site/a/103027">Шульц Говард</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.site/a/71362"> Щеголев Илья</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.site/a/75550"> Экер Харв</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.site/a/51787"> Экман Пол</a></h4></th>
 </tr><tr>  
 <th><a id="a34" src="jpg/starbucks.jpg" title="Как чашка за чашкой строилась STARBUCKS (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
@@ -1880,8 +1880,8 @@
 
 
 <table><tr align="left"> 
-<th colspan="3"><h4>Элрод Хэл</h4></th>
-<th colspan="7"><h4>Эльтеррус Иар</h4></th>
+<th colspan="3"><h4><a href="https://flibusta.site/a/169013">Элрод Хэл</a></h4></th>
+<th colspan="7"><h4><a href="https://flibusta.site/a/20276"> Эльтеррус Иар</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/magia_ytra.jpg" title="Магия утра"></th> 
 <th><a id="a57" src="jpg/magia_ytra_2.jpg" title="Магия утра для финансовой свободы. Как заложить основы счастливой и богатой жизни (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
@@ -1897,10 +1897,10 @@
 
 
 <table><tr align="left"> 
-<th colspan="2"><h4>Эмбирджи Эш</h4></th>
-<th colspan="3"><h4>Эмерсон Клинт</h4></th>
-<th colspan="2"><h4>Энтони Роберт</h4></th>		
-<th colspan="2"><h4>Яррос Ребекка</h4></th>	
+<th colspan="2"><h4><a href="https://flibusta.site/a/237699">Эмбирджи Эш</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.site/a/197704">Эмерсон Клинт</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.site/a/2997">	 Энтони Роберт</a></h4></th>		
+<th colspan="2"><h4><a href="https://flibusta.site/a/163152">Яррос Ребекка</a></h4></th>	
 </tr><tr>  
 <th><a id="a114" src="jpg/sr_palec.jpg" title="Проект Средний палец (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
