--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <base target="_blank">
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+	<th><img src="data/05.2024.jpg"></th>
 <th><img src="jpg/porog_3.jpg" title="Прыжок"></th>
 <th><img src="jpg/eng_1.jpg" title="Английский для дебилов"></th>
 <th><img src="jpg/ogromni_penis.jpg" title="Как жить, если у тебя огромный пенис"></th>
@@ -1249,7 +1250,7 @@
 
 <table><tr align="left"> 
 <th colspan="10"><h4><a href="https://flibusta.site/a/1801">Лукьяненко Сергей</a> 
-					 <a href="https://lukianenko.ru/cikl-dozory-vse/">и др.</a></h4></th>
+					 <a href="https://flibusta.site/s/34360">и др.</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/triks_1.jpg" title="Недотёпа"></th>
 <th><img src="jpg/triks_2.jpg" title="Непоседа"></th>
