Прочитал Смертные Машины

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <base target="_blank">
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/hischni_gorod_1.jpg" title="Смертные Машины"></th>
 	<th><img src="data/05.2024.jpg"></th>
 <th><img src="jpg/porog_3.jpg" title="Прыжок"></th>
 <th><img src="jpg/eng_1.jpg" title="Английский для дебилов"></th>
@@ -1478,10 +1479,13 @@
 
 
 <table><tr align="left"> 
-<th colspan="2"><h4><a href="https://flibusta.site/a/19953">Ремарк Эрих Мария</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.site/a/19953">Ремарк Эрих Мария</a></h4></th>
+<th colspan="2"><h4><a href="http://flibusta.site/a/57592">Рив Филип</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/vremya_zhit_i_vremya_umirat.jpg" title="Время жить и время умирать"></th>
-<th><img src="jpg/na_zapadnom_fronte_bez_peremen.jpg" title="На Западном фронте без перемен"></th> 
+<th><img src="jpg/na_zapadnom_fronte_bez_peremen.jpg" title="На Западном фронте без перемен"></th> <th><img src="jpg/0.jpg"></th>
+
+<th><img src="jpg/hischni_gorod_1.jpg" title="Смертные Машины"></th>
 </tr></table>
 
 
