Прочитал Золото хищников

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <base target="_blank">
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/hischni_gorod_2.jpg" title="Золото хищников"></th>		
 <th><img src="jpg/hischni_gorod_1.jpg" title="Смертные Машины"></th>
 	<th><img src="data/05.2024.jpg"></th>
 <th><img src="jpg/porog_3.jpg" title="Прыжок"></th>
@@ -1480,12 +1481,13 @@
 
 <table><tr align="left"> 
 <th colspan="3"><h4><a href="https://flibusta.site/a/19953">Ремарк Эрих Мария</a></h4></th>
-<th colspan="2"><h4><a href="http://flibusta.site/a/57592">Рив Филип</a></h4></th>
+<th colspan="2"><h4><a href="http://flibusta.site/a/57592"> Рив Филип</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/vremya_zhit_i_vremya_umirat.jpg" title="Время жить и время умирать"></th>
 <th><img src="jpg/na_zapadnom_fronte_bez_peremen.jpg" title="На Западном фронте без перемен"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/hischni_gorod_1.jpg" title="Смертные Машины"></th>
+<th><img src="jpg/hischni_gorod_2.jpg" title="Золото хищников"></th>
 </tr></table>
 
 
@@ -1493,7 +1495,7 @@
 <table><tr align="left"> 
 <th colspan="10"><h4><a href="https://flibusta.site/a/55634">Риордан Рик</a></h4></th>
 </tr><tr>        
-<th><img src="jpg/percy_jackson_01.jpg" title="Перси Джексон и Похититель молний"></th>
+<th><img src="jpg/percy_jackson_1.jpg" title="Перси Джексон и Похититель молний"></th>
 <th><img src="jpg/percy_jackson_2.jpg" title="Перси Джексон и Море чудовищ"></th>
 <th><img src="jpg/percy_jackson_3.jpg" title="Перси Джексон и Проклятие титана"></th>
 <th><img src="jpg/percy_jackson_4.jpg" title="Перси Джексон и Лабиринт смерти"></th>
