Прочитал Автоматизация рутинных задач с помощью Python

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <base target="_blank">
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/python_avto.jpg" title="Автоматизация рутинных задач с помощью Python"></th>
 <th><img src="jpg/hischni_gorod_2.jpg" title="Золото хищников"></th>		
 <th><img src="jpg/hischni_gorod_1.jpg" title="Смертные Машины"></th>
 	<th><img src="data/05.2024.jpg"></th>
@@ -1923,12 +1924,13 @@
 
 
 <table><tr align="left"> 
-<th colspan="4"><h4>Python</h4></th>
+<th colspan="5"><h4>Python</h4></th>
 </tr><tr> 
 <th><img src="jpg/python_1.jpg" title="Swaroop Chitlur - A Byte of Python (Russian)"></th>
 <th><img src="jpg/python_2.jpg" title="МакГрат Майк - Программирование на Python для начинающих"></th> 
 <th><img src="jpg/python_3.jpg" title="Бэрри Пол - Изучаем программирование на Python"></th>
 <th><img src="jpg/algoritmi.jpg" title="Бхаргава Адитья - Грокаем алгоритмы"></th> 
+<th><img src="jpg/python_avto.jpg" title="Автоматизация рутинных задач с помощью Python"></th>
 
 
 
