Прочитал Вторники с Морри, или Величайший урок жизни

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <base target="_blank">
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/morri.jpg" title="Вторники с Морри, или Величайший урок жизни"></th>
 <th><img src="jpg/python_avto.jpg" title="Автоматизация рутинных задач с помощью Python"></th>
 <th><img src="jpg/hischni_gorod_2.jpg" title="Золото хищников"></th>		
 <th><img src="jpg/hischni_gorod_1.jpg" title="Смертные Машины"></th>
@@ -1888,29 +1889,38 @@
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="https://flibusta.site/a/33690"> Элбом Митч</a></h4></th>
 <th colspan="3"><h4><a href="https://flibusta.site/a/169013">Элрод Хэл</a></h4></th>
-<th colspan="7"><h4><a href="https://flibusta.site/a/20276"> Эльтеррус Иар</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/morri.jpg" title="Вторники с Морри, или Величайший урок жизни"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/magia_ytra.jpg" title="Магия утра"></th> 
 <th><a id="a57" src="jpg/magia_ytra_2.jpg" title="Магия утра для финансовой свободы. Как заложить основы счастливой и богатой жизни (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
-
-<th><img src="jpg/bremia_imperatora_1.jpg" title="Тропой мастеров"></th>
-<th><img src="jpg/bremia_imperatora_2.jpg" title="Скрытое пророчество"></th>
-<th><img src="jpg/bremia_imperatora_3.jpg" title="Навстречу судьбе"></th>
-<th><img src="jpg/bremia_imperatora_4.jpg" title="Незваные гости"></th>
-<th><img src="jpg/bremia_imperatora_5.jpg" title="Дальний путь"></th>
-<th><img src="jpg/bremia_imperatora_6.jpg" title="Дорога домой"></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="7"><h4><a href="https://flibusta.site/a/20276"> Эльтеррус Иар</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.site/a/237699">Эмбирджи Эш</a></h4></th>
+</tr><tr>  
+<th><img src="jpg/bremia_imperatora_1.jpg" title="Тропой мастеров"></th>
+<th><img src="jpg/bremia_imperatora_2.jpg" title="Скрытое пророчество"></th>
+<th><img src="jpg/bremia_imperatora_3.jpg" title="Навстречу судьбе"></th>
+<th><img src="jpg/bremia_imperatora_4.jpg" title="Незваные гости"></th>
+<th><img src="jpg/bremia_imperatora_5.jpg" title="Дальний путь"></th>
+<th><img src="jpg/bremia_imperatora_6.jpg" title="Дорога домой"></th> <th><img src="jpg/0.jpg"></th>
+
+<th><a id="a114" src="jpg/sr_palec.jpg" title="Проект Средний палец (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
+</tr></table>
+
+
+
+<table><tr align="left"> 
 <th colspan="3"><h4><a href="https://flibusta.site/a/197704">Эмерсон Клинт</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.site/a/2997">	 Энтони Роберт</a></h4></th>		
 <th colspan="2"><h4><a href="https://flibusta.site/a/163152">Яррос Ребекка</a></h4></th>	
 </tr><tr>  
-<th><a id="a114" src="jpg/sr_palec.jpg" title="Проект Средний палец (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/vizhivanie.jpg" title="Выживание по методике спецслужб. 100 ключевых навыков"></th>
 <th><img src="jpg/vizhivsnie_v_dikih.jpg" title="Выживание в дикой природе и экстремальных ситуациях. 100 ключевых навыков по методике спецслужб"></th> <th><img src="jpg/0.jpg"></th>
