--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <base target="_blank">
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/hischni_gorod_4.jpg" title="Надвинувшаяся тьма"></th>
 <th><img src="jpg/hischni_gorod_3.jpg" title="Адские конструкции"></th>
 <th><a id="a136" src="jpg/frankishtein.jpg" title="Франкенштейн (аудиокнига)"></a></th>
 	<th><img src="data/06.2024.jpg"></th>
@@ -1494,6 +1495,7 @@
 <th><img src="jpg/hischni_gorod_1.jpg" title="Смертные Машины"></th>
 <th><img src="jpg/hischni_gorod_2.jpg" title="Золото хищников"></th>
 <th><img src="jpg/hischni_gorod_3.jpg" title="Адские конструкции"></th>
+<th><img src="jpg/hischni_gorod_4.jpg" title="Надвинувшаяся тьма"></th>
 </tr></table>
 
 
