Прочитал Железное пламя

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <base target="_blank">
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/4_krilo_2.jpg" title="Железное пламя"></th>
 <th><a id="a137" src="jpg/fgrom_1.jpg" title="Майор Гром. Художественный роман (аудиокнига)"></a></th>
 <th><img src="jpg/hischni_gorod_4.jpg" title="Надвинувшаяся тьма"></th>
 <th><img src="jpg/hischni_gorod_3.jpg" title="Адские конструкции"></th>
@@ -1939,7 +1940,8 @@
 
 <th><img src="jpg/gl_sec.jpg" title="Главные секреты абсолютной уверенности в себе"></th> <th><img src="jpg/0.jpg"></th>
 
-<th><a id="a122" src="jpg/4_krilo.jpg" title="Четвертое крыло (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
+<th><a id="a122" src="jpg/4_krilo.jpg" title="Четвертое крыло (аудиокнига)"></a></th>
+<th><img src="jpg/4_krilo_2.jpg" title="Железное пламя"></th>
 
 
 
