Прочитал Майор Гром. Игра слов

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <base target="_blank">
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/grom_2.jpg" title="Майор Гром. Игра слов. Художественный роман"></th>
 <th><img src="jpg/4_krilo_2.jpg" title="Железное пламя"></th>
-<th><a id="a137" src="jpg/fgrom_1.jpg" title="Майор Гром. Художественный роман (аудиокнига)"></a></th>
+<th><a id="a137" src="jpg/grom_1.jpg" title="Майор Гром. Художественный роман (аудиокнига)"></a></th>
 <th><img src="jpg/hischni_gorod_4.jpg" title="Надвинувшаяся тьма"></th>
 <th><img src="jpg/hischni_gorod_3.jpg" title="Адские конструкции"></th>
 <th><a id="a136" src="jpg/frankishtein.jpg" title="Франкенштейн (аудиокнига)"></a></th>
@@ -606,7 +607,7 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4>										Ветошкина Галина</h4></th>
-<th colspan="2"><h4>										Волков Алексей</h4></th>
+<th colspan="2"><h4><a href="http://flibusta.site/a/184698">Волков Алексей</a></h4></th>
 <th colspan="6"><h4><a href="http://flibusta.site/a/116080">Вуйчич Ник</a></h4></th> 
 </tr><tr>
 <th><img src="jpg/dodo_kniga.jpg" title="Ветошкина Галина, Заварин Иван, Игушева Екатерина, Котин Максим - Додо книга"></th> <th><img src="jpg/0.jpg"></th>
@@ -1208,31 +1209,33 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4><a href="https://flibusta.site/a/221505">Круз Кевин</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.site/a/184699">Кутузов Кирилл</a></h4></th>
 <th colspan="2"><h4>										 Кутузов Максим</h4></th>
 <th colspan="2"><h4><a href="https://flibusta.site/a/143801">Кушнер Дэвид</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.site/a/72087"> Кэллос Джон</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.site/a/51259"> Кэмпбелл Джозеф</a></h4></th>
 </tr><tr>  
 <th><a id="a85" src="jpg/15_time.jpg" title="15 секретов управления временем. Как успешные люди успевают всё (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
+
+<th><img src="jpg/grom_2.jpg" title="Майор Гром. Игра слов. Художественный роман"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/knyaz_oboroten.jpg" title="Князь-ваўкалак"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a133" src="jpg/GTA.jpg" title="Потрачено. Беспредельная история GTA (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/everyone_ironman.jpg" title="Железный человек есть в каждом"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><a id="a9" src="jpg/1000likii.jpg" title="Тысячеликий герой (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 </tr> </table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="https://flibusta.site/a/51259"> Кэмпбелл Джозеф</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.site/a/203163">Лайфхакер</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.site/a/18347"> Лао-Цзы</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.site/a/157639">Ларссен Эрик</a></h4></th>
 <th colspan="3"><h4><a href="https://flibusta.site/a/18361"> Лаундес Лейл</a></h4></th>
-<th colspan="1"><h4><a href="https://flibusta.site/a/18295"> Лесков Н.С.</a></h4></th>
 </tr><tr>  
+<th><a id="a9" src="jpg/1000likii.jpg" title="Тысячеликий герой (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
+
 <th><a id="a102" src="jpg/55_idei.jpg" title="55 светлых идей по улучшению себя и своей жизни (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/dao_d_czin.jpg" title="Дао Дэ Цзин"></th> <th><img src="jpg/0.jpg"></th>
@@ -1240,18 +1243,19 @@
 <th><a id="a12" src="jpg/na_predele.jpg" title="На пределе. Неделя без жалости к себе (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/s.s.s.jpg" title="С.С.С."></th>
-<th><img src="jpg/kak_razgovarivat_s_kem_ygodno_i_o_chem_ygodno.jpg" title="Как говорить с кем угодно и о чем угодно"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><a id="a93" src="jpg/levsha.jpg" title="Левша (аудиокнига)"></a></th> 
+<th><img src="jpg/kak_razgovarivat_s_kem_ygodno_i_o_chem_ygodno.jpg" title="Как говорить с кем угодно и о чем угодно"></th> 
 </tr></table>
 
 
 
 <table><tr align="left">
+<th colspan="2"><h4><a href="https://flibusta.site/a/18295"> Лесков Н.С.</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.site/a/29586">Лесли Алекс</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.site/a/18270">Лихачев Дмитрий</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.site/a/47863">Лоэр Джим</a></h4></th>
-</tr><tr>  
+</tr><tr> 
+<th><a id="a93" src="jpg/levsha.jpg" title="Левша (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th> 
+
 <th><img src="jpg/lesly_1.jpg" title="Жжизнь без трусов"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/pisma.jpg" title="Письма о добром и прекрасном"></th>	<th><img src="jpg/0.jpg"></th>
